--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BTN Advisors | Orchestrating Success </title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700|Playfair+Display:400i,700i,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700|Playfair+Display:700i" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
