--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <section class="contact-us">
         <div class="email"><a href="mailto:info@btnadvisors.com">info@btnadvisors.com</a></div>
-        <div class="email">970-449-2420</div>
+        <div class="email">970.484.2755</div>
       </section>
       <img src="images/btn-hero-image-slim.jpg" alt="Orchestrating Success" title="Btn Advisors Orchestrating Success" />
     </header>
