Adding in logo and update style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="images/btn-hero-image-slim.jpg" alt="Orchestrating Success" title="Btn Advisors Orchestrating Success" />
     </header>
     <main>
-      <img src="" alt="BTN Advisors Logo" title="BTN Advisors Logo" />
+      <img src="images/logo.svg" class="logo" width="300" alt="BTN Advisors Logo" title="BTN Advisors Logo" />
       <h1>Orchestrating Success</h1>
       <h2>We are here to help you find your stride, your success, and achieve your bold ideas.</h2>
       <p>Strategic advisor to organizations with bold ideas and audacious goals. We believe that how we get there is as important as where we are going. We believe that alignment plus engagement can catapult a company towards its purpose.</p>
